force-app/main/default/objects/Change_Event__c/Change_Event__c.object-meta.xml
<CustomObject>
    <description>Ledger of deploys, KB publishes, model and prompt edits. Correlation source for attribution. Public Read Only OWD.</description>
    <label>Change Event</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Change Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>