force-app/main/default/objects/Change_Event__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Who or what triggered the change (username, system, or integration name).</description>
    <label>Actor</label>
    <type>Text</type>
    <length>255</length>
</CustomField>