force-app/main/default/objects/Change_Event__c/fields/Affected_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Affected_Artifacts__c</fullName>
    <description>JSON list of artifacts (flows, prompts, models, KB articles) touched by the change.</description>
    <label>Affected Artifacts</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>