force-app/main/default/objects/Change_Event__c/fields/Change_Key__c.field-meta.xml
<CustomField>
    <fullName>Change_Key__c</fullName>
    <description>External Id used to upsert change events idempotently in FleetChangeLedgerService.ingest.</description>
    <label>Change Key</label>
    <type>Text</type>
    <length>128</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>