force-app/main/default/objects/Change_Event__c/fields/Correlation_Window_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Window_Minutes__c</fullName>
    <description>Window in minutes within which this change may be correlated to a drift changepoint.</description>
    <label>Correlation Window Minutes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>