force-app/main/default/objects/Change_Event__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>Free-form or JSON detail about the change.</description>
    <label>Detail</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>