force-app/main/default/objects/Change_Event__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <description>Finer-grained classification within the source, e.g. FlowDeploy or ModelSwap.</description>
    <label>Kind</label>
    <type>Text</type>
    <length>80</length>
</CustomField>