force-app/main/default/objects/Change_Event__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Human-readable summary of the change shown on the timeline.</description>
    <label>Label</label>
    <type>Text</type>
    <length>255</length>
</CustomField>