force-app/main/default/objects/Change_Event__c/fields/Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Occurred_At__c</fullName>
    <description>When the change happened, used for correlation windows during attribution.</description>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>