force-app/main/default/objects/Change_Event__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Change source, matching Fleet_Change_Source__mdt.Source_Key__c.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DEPLOY</fullName>
                <label>Deploy</label>
            </value>
            <value>
                <fullName>KNOWLEDGE</fullName>
                <label>Knowledge</label>
            </value>
            <value>
                <fullName>PROMPT</fullName>
                <label>Prompt</label>
            </value>
            <value>
                <fullName>MODEL</fullName>
                <label>Model</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>